feat(common): material UI and todo list styles

--- a/libs/todo-app/feature-list/src/lib/todos-wrapper/todos-wrapper.component.html
+++ b/libs/todo-app/feature-list/src/lib/todos-wrapper/todos-wrapper.component.html
@@ -1,2 +1,12 @@
-<button (click)='addTodo()'>Add</button>
-<todo-app-todo-item *ngFor='let todo of (todos$ | async)' [todo]='todo' (deleteTodo)='deleteTodo($event)'></todo-app-todo-item>
+<div class="list">
+  <mat-action-list>
+      <todo-app-todo-item
+        mat-list-item
+        *ngFor="let todo of todos$ | async"
+        [todo]="todo"
+        (deleteTodo)="deleteTodo($event)"
+      ></todo-app-todo-item>
+  </mat-action-list>
+</div>
+
+<button mat-button class='button' color="primary" (click)="addTodo()">Add</button>
