feat(common): routing and component

--- a/libs/todo-app/ui-list/src/lib/todo-item/todo-item.component.html
+++ b/libs/todo-app/ui-list/src/lib/todo-item/todo-item.component.html
@@ -1,7 +1,12 @@
-<div class="item">
+<div class="item" [routerLink]='todo?._id || "/"'>
   <h2 class="title mat-title">{{ todo?.name }}</h2>
-  <button class="button" mat-icon-button color="warn" (click)="removeTodo()">
-    <mat-icon> delete </mat-icon>
-  </button>
+  <div class='buttons'>
+    <button class="button" mat-icon-button color="primary" (click)="removeTodo()">
+      <mat-icon> edit </mat-icon>
+    </button>
+    <button class="button" mat-icon-button color="warn" (click)="removeTodo()">
+      <mat-icon> delete </mat-icon>
+    </button>
+  </div>
 </div>
 <mat-divider></mat-divider>
