feat(common): details page styling

--- a/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.html
+++ b/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.html
@@ -1,1 +1,9 @@
-<p>todo-details works!</p>
+<mat-card>
+  <mat-card-title>Todo title</mat-card-title>
+  <mat-card-subtitle>Todo description</mat-card-subtitle>
+  <mat-card-actions align="end">
+    <button mat-raised-button color='primary'>Done</button>
+    <button mat-raised-button color='warn'>Remove</button>
+  </mat-card-actions>
+</mat-card>
+
