--- a/libs/todo-app/ui-list/src/lib/todo-item/todo-item.component.scss
+++ b/libs/todo-app/ui-list/src/lib/todo-item/todo-item.component.scss
@@ -2,7 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 0;
+  padding: 5px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #efefef
+  }
 }
 
 .title {
