--- a/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.html
+++ b/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.html
@@ -3,8 +3,11 @@
 </button>
 <mat-card *ngIf="todo$ | async as todo">
   <div class="header">
-    <mat-card-title>
+    <mat-card-title class="title">
       {{ todo.name }}
+      <mat-chip-list aria-label="Fish selection" *ngIf="todo.done">
+        <mat-chip color="accent" selected>Done</mat-chip>
+      </mat-chip-list>
     </mat-card-title>
     <button mat-icon-button color="primary" (click)="editTodo(todo)">
       <mat-icon>edit</mat-icon>
@@ -19,6 +22,8 @@
     <button mat-raised-button color="warn" (click)="deleteTodo(todo._id)">
       Remove
     </button>
-    <button mat-raised-button color="primary" (click)="deleteTodo(todo._id)">Done</button>
+    <button mat-raised-button color="primary" (click)="switchTodoStatus(todo)">
+      {{ todo.done ? 'Undone' : 'Done'}}
+    </button>
   </mat-card-actions>
 </mat-card>
