--- a/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.scss
+++ b/libs/todo-app/feature-details/src/lib/todo-details/todo-details.component.scss
@@ -1,6 +1,23 @@
+
+
 .header {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .title {
+    display: flex;
+    align-items: center;
+
+    & > *{
+      margin-left: 15px;
+    }
+  }
+}
+
+.tag {
+  font-size: 1rem;
+  margin: 0 5px;
+  padding: 3px;
 }
