--- a/libs/todo-app/feature-add-edit-todo/src/lib/add-edit-dialog/add-edit-dialog.component.html
+++ b/libs/todo-app/feature-add-edit-todo/src/lib/add-edit-dialog/add-edit-dialog.component.html
@@ -30,7 +30,7 @@
     </mat-form-field>
   </form>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
   <button mat-raised-button color="primary" (click)='onSubmit()'>{{data ? 'Edit todo' : 'Add todo'}}</button>
 </div>
